# Deep-Learning-Project

./: .gitignore  README.md  Readme.md  dvc.yaml  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
configs/: config.yaml
research/: st_01_trials.ipynb  st_02_trials.ipynb  st_03_trials.ipynb  st_04_trials.ipynb  st_05_trials.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
