[metadata]
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
python_requires= >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3 #unit and integration test
    mypy>=0.971 #typos
    flaske8>=5.0.4 #mistakes in coding (indentation)(standardization)
    tox>=3.25.1 #working environment and local working
    black>=22.8.0 #formatting/structire of the code

[options.package_data]
deepClassifier = py.typed #do not check the packages that we will import in deepClassifier eg pandas, tf, np, etc.  

[flake8]
max-line-lenght = 160
exclude = __init__.py #Do not check this file since we would be keeping it empty

